# rs-io-binary

./: Cargo.toml  README.md  README.zh_CN.md  align-ci.sh  ci-check.sh  coverage.sh
benches/: README.md  run_stream_bench_groups.sh  stream.rs
benches/results/: 2026-05-23-buffered-stream-baseline.md  2026-05-24-buffered-input-refill.md  2026-05-24-buffered-varint-fast-path-and-std-native.md
doc/: user_guide.md  user_guide.zh_CN.md
src/: lib.rs  prelude.rs
src/ext/: binary_read_ext.rs  binary_write_ext.rs  leb128_read_ext.rs  leb128_write_ext.rs  mod.rs  string_read_ext.rs  string_write_ext.rs  zig_zag_read_ext.rs  zig_zag_write_ext.rs
src/stream/: binary_reader.rs  binary_writer.rs  buffered_binary_reader.rs  buffered_binary_writer.rs  buffered_decode_input_ext.rs  buffered_encode_output_ext.rs  buffered_input.rs  buffered_input_codec_ext.rs  buffered_leb128_reader.rs  buffered_leb128_writer.rs  buffered_output.rs  buffered_output_codec_ext.rs  buffered_zig_zag_reader.rs  buffered_zig_zag_writer.rs  leb128_reader.rs  leb128_writer.rs  mod.rs  stream_codec_buffered_decode_hooks.rs  stream_codec_buffered_decoder.rs  stream_codec_decode_error.rs  transcode_decode_input_ext.rs  transcode_encode_output_ext.rs  zig_zag_reader.rs  zig_zag_writer.rs
src/util/: allocation.rs  mod.rs  streams.rs
tests/: prelude_tests.rs
tests/ext/: binary_read_ext_tests.rs  binary_write_ext_tests.rs  leb128_read_ext_tests.rs  leb128_write_ext_tests.rs  mod.rs  string_read_ext_tests.rs  string_write_ext_tests.rs  zig_zag_read_ext_tests.rs  zig_zag_write_ext_tests.rs
tests/stream/: binary_reader_tests.rs  binary_writer_tests.rs  buffered_binary_reader_tests.rs  buffered_binary_writer_tests.rs  buffered_decode_input_ext_tests.rs  buffered_encode_output_ext_tests.rs  buffered_leb128_reader_tests.rs  buffered_leb128_writer_tests.rs  buffered_zig_zag_reader_tests.rs  buffered_zig_zag_writer_tests.rs  leb128_reader_tests.rs  leb128_writer_tests.rs  mod.rs  transcode_decode_input_ext_tests.rs  transcode_encode_output_ext_tests.rs  zig_zag_reader_tests.rs  zig_zag_writer_tests.rs
